nickel-lang-cli/tests/snapshot/snapshots/snapshot__error_stderr_array_contract_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a value
  ┌─ [INPUTS_PATH]/errors/array_contract_fail.ncl:5:37
  │
5 │ let Foo = Array Number in %force% (["a"] | Foo)
  │                                     ^^^    --- expected type
  │                                     │       
  │                                     applied to this expression
  │
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ "a"
  │ --- evaluated to this value


